--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,16 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+  fastapi-app:   
+    build:
+      context: . 
+      dockerfile: Dockerfile 
+    ports:
+      - "8060:8060" 
+
+    volumes:
+      - .:/app
+    env_file:
+      - .env
+
+
